VS-3693 VS-3693 MERGE (Git) branch 'feature/VS-3744-fed-legacy-header-and-footer-styling-fixes' into feature/VS-3693-fed-text-overlaps-search-fields

--- a/ui-integration/embed/import-override.scss
+++ b/ui-integration/embed/import-override.scss
@@ -393,6 +393,13 @@
     left: -1.5rem;
 }
 
+.c-results__map__refresh.btn {
+    background: #fff !important;
+    font-size: 1.4rem !important;
+    display: flex !important;
+    align-items: center !important;
+}
+
 @media (min-width: 500px) {
     .c-results__filters__list-title,
     .c-results__pagination__li {
